--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0"
   }
 }
